--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.8.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/onest": "^5.0.4",
     "astro": "^4.12.2",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3"
